# wpinq

./: Cargo.toml  README.md
examples/: degrees.rs  tpch.rs
src/: lib.rs  merge_sort.rs
src/analyses/: degrees.rs  mod.rs
src/operators/: flat_map.rs  join.rs  measure.rs  min_max.rs  mod.rs  shave.rs
